tests/errors/unbound.expect
---CODE---
1
---STDERR---
error: Undefined component name: Add
  ┌─ tests/errors/unbound.fil:4:14
  │
4 │     A := new Add;
  │              ^^^ unknown component

error: Undefined instance name: B
  ┌─ tests/errors/unbound.fil:5:10
  │
5 │     a := B<G>(20, 30);
  │          ^ unknown instance

Compilation failed with 2 errors.
